[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/GaroaHackerClubeBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Button-Scoreboard1-Play-Again.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Scoreboard1.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 75
font_data = ExtResource( 1 )

[node name="ScoreboardPoz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.034
anchor_top = 0.028
anchor_right = 0.034
anchor_bottom = 0.028
margin_left = -45.52
margin_top = 79.84
margin_right = 1234.48
margin_bottom = 150.84
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Time Up"
align = 1

[node name="LabelScore2" type="Label" parent="."]
margin_left = 640.0
margin_top = 314.0
margin_right = 1280.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( -196, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="LabelUsername3" type="Label" parent="."]
margin_top = 365.0
margin_right = 640.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 444, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore3" type="Label" parent="."]
margin_left = 640.0
margin_top = 365.0
margin_right = 1280.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( -196, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="LabelUsername4" type="Label" parent="."]
margin_top = 416.0
margin_right = 640.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 444, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="LabelScore4" type="Label" parent="."]
margin_left = 640.0
margin_top = 416.0
margin_right = 1280.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( -196, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="LabelUsername5" type="Label" parent="."]
margin_left = -2.0
margin_top = 472.0
margin_right = 638.0
margin_bottom = 523.0
rect_pivot_offset = Vector2( 444, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="LabelScore5" type="Label" parent="."]
margin_left = 638.0
margin_top = 472.0
margin_right = 1278.0
margin_bottom = 523.0
rect_pivot_offset = Vector2( -196, 19 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="Button-Scoreboard1-Play-Again" type="Button" parent="."]
margin_left = -2.0
margin_top = 491.0
margin_right = 1278.0
margin_bottom = 630.0
custom_colors/font_color = Color( 0.580392, 0.556863, 0.556863, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.580392, 0.556863, 0.556863, 1 )
custom_fonts/font = SubResource( 6 )
text = "Play Again"
flat = true
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Button-Scoreboard1-Play-Again"]
wait_time = 3.0
autostart = true

[node name="HTTPRequest" type="HTTPRequest" parent="Button-Scoreboard1-Play-Again"]

[connection signal="pressed" from="Button-Scoreboard1-Play-Again" to="Button-Scoreboard1-Play-Again" method="_on_ButtonScoreboard1PlayAgain_pressed"]
[connection signal="request_completed" from="Button-Scoreboard1-Play-Again/HTTPRequest" to="Button-Scoreboard1-Play-Again" method="_on_HTTPRequest_request_completed"]
